--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -12,7 +12,7 @@
     "prepublishOnly": "pnpm run build",
     "test": "vitest"
   },
-  "devDependencies": {
+  "dependencies": {
     "axios": "^0.27.2"
   }
 }
