--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "pnpm -r run stub",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public",
     "typeCheck": "tsc --noEmit",
-    "test": "vitest",
+    "test": "npm -C test/http-test run test",
     "coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
