--- a/example/vue/package.json
+++ b/example/vue/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@elonehoo/http":"workspace:*",
+    "axios": "^0.27.2",
     "@vitejs/plugin-vue": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.7",
