--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -13,8 +13,10 @@
     "test": "vitest"
   },
   "dependencies": {
-    "axios": "^0.27.2",
     "lodash-es": "^4.17.21",
     "qs": "^6.10.3"
+  },
+  "devDependencies": {
+    "axios": "^0.27.2"
   }
 }
