--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -12,11 +12,9 @@
     "prepublishOnly": "pnpm run build",
     "test": "vitest"
   },
-  "dependencies": {
+  "devDependencies": {
+    "axios": "^0.27.2",
     "lodash-es": "^4.17.21",
     "qs": "^6.10.3"
-  },
-  "devDependencies": {
-    "axios": "^0.27.2"
   }
 }
