--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -12,9 +12,14 @@
     "prepublishOnly": "pnpm run build",
     "test": "vitest"
   },
-  "devDependencies": {
-    "axios": "^0.27.2",
+  "dependencies": {
     "lodash-es": "^4.17.21",
-    "qs": "^6.10.3"
+    "qs": "^6.10.3",
+    "@types/lodash-es": "^4.17.6",
+    "@types/qs": "^6.9.7"
+  },
+  "devDependencies": {
+
+    "axios": "^0.27.2"
   }
 }
