--- a/packages/http/package.json
+++ b/packages/http/package.json
@@ -20,5 +20,12 @@
   "devDependencies": {
     "axios": "1.2.2",
     "tsup": "^6.5.0"
+  },
+  "peerDependencies": {
+    "@types/lodash-es": "^4.17.6",
+    "@types/qs": "^6.9.7",
+    "lodash-es": "^4.17.21",
+    "axios": "1.2.2",
+    "qs": "^6.11.0"
   }
 }
